--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+  @apply bg-gray-200 dark:bg-gray-800;
+  /* Użycie Tailwind do zmiany tła */
+}
+
+body {
+  @apply bg-gray-200 dark:bg-gray-800;
+}
